// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadDataView matches snapshot batch 1`] = `
<div
  className="load-data-view app-view welcome"
>
  <div
    className="step-nav"
  >
    <div
      className="step-nav-inner"
    >
      <div
        className="step-section"
      >
        <div
          className="step-nav-l1"
        >
          Connect and parse raw data
        </div>
        <Blueprint4.ButtonGroup
          className="step-nav-l2"
        >
          <Blueprint4.Button
            active={true}
            className="welcome"
            disabled={false}
            icon={false}
            onClick={[Function]}
            text="Start"
          />
          <Blueprint4.Button
            active={false}
            className="connect"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Connect"
          />
          <Blueprint4.Button
            active={false}
            className="parser"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Parse data"
          />
        </Blueprint4.ButtonGroup>
      </div>
      <div
        className="step-section"
      >
        <div
          className="step-nav-l1"
        >
          Transform data and configure schema
        </div>
        <Blueprint4.ButtonGroup
          className="step-nav-l2"
        >
          <Blueprint4.Button
            active={false}
            className="timestamp"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Parse time"
          />
          <Blueprint4.Button
            active={false}
            className="transform"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Transform"
          />
          <Blueprint4.Button
            active={false}
            className="filter"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Filter"
          />
          <Blueprint4.Button
            active={false}
            className="schema"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Configure schema"
          />
        </Blueprint4.ButtonGroup>
      </div>
      <div
        className="step-section"
      >
        <div
          className="step-nav-l1"
        >
          Tune parameters
        </div>
        <Blueprint4.ButtonGroup
          className="step-nav-l2"
        >
          <Blueprint4.Button
            active={false}
            className="partition"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Partition"
          />
          <Blueprint4.Button
            active={false}
            className="tuning"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Tune"
          />
          <Blueprint4.Button
            active={false}
            className="publish"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Publish"
          />
        </Blueprint4.ButtonGroup>
      </div>
      <div
        className="step-section"
      >
        <div
          className="step-nav-l1"
        >
          Verify and submit
        </div>
        <Blueprint4.ButtonGroup
          className="step-nav-l2"
        >
          <Blueprint4.Button
            active={false}
            className="spec"
            disabled={false}
            icon="manually-entered-data"
            onClick={[Function]}
            text="Edit spec"
          />
        </Blueprint4.ButtonGroup>
      </div>
    </div>
  </div>
  <React.Fragment>
    <div
      className="main"
    >
      <div
        className="ingestion-cards"
      >
        <React.Fragment>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for index_parallel:s3"
              src="/some/base_url/assets/s3.png"
            />
            <p>
              Amazon S3
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for index_parallel:azureStorage"
              src="/some/base_url/assets/azurestorage.png"
            />
            <p>
              Azure Data Lake
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for index_parallel:google"
              src="/some/base_url/assets/google.png"
            />
            <p>
              Google Cloud Storage
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for index_parallel:delta"
              src="/some/base_url/assets/delta.png"
            />
            <p>
              Delta Lake
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for index_parallel:hdfs"
              src="/some/base_url/assets/hdfs.png"
            />
            <p>
              HDFS
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for index_parallel:druid"
              src="/some/base_url/assets/druid.png"
            />
            <p>
              Reindex from Druid
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for index_parallel:http"
              src="/some/base_url/assets/http.png"
            />
            <p>
              HTTP(s)
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for index_parallel:local"
              src="/some/base_url/assets/local.png"
            />
            <p>
              Local disk
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for index_parallel:inline"
              src="/some/base_url/assets/inline.png"
            />
            <p>
              Paste data
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for example"
              src="/some/base_url/assets/example.png"
            />
            <p>
              Example data
            </p>
          </Blueprint4.Card>
        </React.Fragment>
        <Blueprint4.Card
          className="ingestion-card"
          elevation={1}
          interactive={true}
          onClick={[Function]}
        >
          <img
            alt="Ingestion tile for other"
            src="/some/base_url/assets/other.png"
          />
          <p>
            Other
          </p>
        </Blueprint4.Card>
      </div>
    </div>
    <div
      className="control"
    >
      <Blueprint4.FormGroup>
        <Blueprint4.Callout>
          <p>
            Please specify where your raw data is located.
          </p>
        </Blueprint4.Callout>
      </Blueprint4.FormGroup>
    </div>
  </React.Fragment>
</div>
`;

exports[`LoadDataView matches snapshot streaming 1`] = `
<div
  className="load-data-view app-view welcome"
>
  <div
    className="step-nav"
  >
    <div
      className="step-nav-inner"
    >
      <div
        className="step-section"
      >
        <div
          className="step-nav-l1"
        >
          Connect and parse raw data
        </div>
        <Blueprint4.ButtonGroup
          className="step-nav-l2"
        >
          <Blueprint4.Button
            active={true}
            className="welcome"
            disabled={false}
            icon={false}
            onClick={[Function]}
            text="Start"
          />
          <Blueprint4.Button
            active={false}
            className="connect"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Connect"
          />
          <Blueprint4.Button
            active={false}
            className="parser"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Parse data"
          />
        </Blueprint4.ButtonGroup>
      </div>
      <div
        className="step-section"
      >
        <div
          className="step-nav-l1"
        >
          Transform data and configure schema
        </div>
        <Blueprint4.ButtonGroup
          className="step-nav-l2"
        >
          <Blueprint4.Button
            active={false}
            className="timestamp"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Parse time"
          />
          <Blueprint4.Button
            active={false}
            className="transform"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Transform"
          />
          <Blueprint4.Button
            active={false}
            className="filter"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Filter"
          />
          <Blueprint4.Button
            active={false}
            className="schema"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Configure schema"
          />
        </Blueprint4.ButtonGroup>
      </div>
      <div
        className="step-section"
      >
        <div
          className="step-nav-l1"
        >
          Tune parameters
        </div>
        <Blueprint4.ButtonGroup
          className="step-nav-l2"
        >
          <Blueprint4.Button
            active={false}
            className="partition"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Partition"
          />
          <Blueprint4.Button
            active={false}
            className="tuning"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Tune"
          />
          <Blueprint4.Button
            active={false}
            className="publish"
            disabled={true}
            icon={false}
            onClick={[Function]}
            text="Publish"
          />
        </Blueprint4.ButtonGroup>
      </div>
      <div
        className="step-section"
      >
        <div
          className="step-nav-l1"
        >
          Verify and submit
        </div>
        <Blueprint4.ButtonGroup
          className="step-nav-l2"
        >
          <Blueprint4.Button
            active={false}
            className="spec"
            disabled={false}
            icon="manually-entered-data"
            onClick={[Function]}
            text="Edit spec"
          />
        </Blueprint4.ButtonGroup>
      </div>
    </div>
  </div>
  <React.Fragment>
    <div
      className="main"
    >
      <div
        className="ingestion-cards"
      >
        <React.Fragment>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for kafka"
              src="/some/base_url/assets/kafka.png"
            />
            <p>
              Apache Kafka
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for kinesis"
              src="/some/base_url/assets/kinesis.png"
            />
            <p>
              Amazon Kinesis
            </p>
          </Blueprint4.Card>
          <Blueprint4.Card
            className="ingestion-card"
            elevation={1}
            interactive={true}
            onClick={[Function]}
          >
            <img
              alt="Ingestion tile for azure-event-hubs"
              src="/some/base_url/assets/azure-event-hubs.png"
            />
            <p>
              Azure Event Hub
            </p>
          </Blueprint4.Card>
        </React.Fragment>
        <Blueprint4.Card
          className="ingestion-card"
          elevation={1}
          interactive={true}
          onClick={[Function]}
        >
          <img
            alt="Ingestion tile for other"
            src="/some/base_url/assets/other.png"
          />
          <p>
            Other
          </p>
        </Blueprint4.Card>
      </div>
    </div>
    <div
      className="control"
    >
      <Blueprint4.FormGroup>
        <Blueprint4.Callout>
          <p>
            Please specify where your raw data is located.
          </p>
        </Blueprint4.Callout>
      </Blueprint4.FormGroup>
    </div>
  </React.Fragment>
</div>
`;
